<resources>
    <string name="param_account_status">param_account_status</string>
    <string name="param_identity_credential_status">param_identity_credential_status</string>
    <string name="param_id">param_id</string>
    <string name="param_first_name">param_first_name</string>
    <string name="param_last_name">param_last_name</string>
    <string name="param_email">param_email</string>
    <string name="param_password">param_password</string>
    <string name="param_gender">param_gender</string>
    <string name="param_dob">param_dob</string>
    <string name="param_telephone">param_telephone</string>
    <string name="param_mobile">param_mobile</string>
    <string name="param_country">param_country</string>
    <string name="param_nationality">param_nationality</string>
    <string name="param_nationality_code">param_nationality_code</string>
    <string name="param_address1">param_address1</string>
    <string name="param_address2">param_address2</string>
    <string name="param_state">param_state</string>
    <string name="param_postcode">param_postcode</string>
    <string name="param_city">param_city</string>
    <string name="param_wallet_name">param_wallet_name</string>
    <string name="param_wallet_id">param_wallet_id</string>
    <string name="param_passphrase">param_passphrase</string>
    <string name="param_created_at">param_created_at</string>
    <string name="param_endpoint_did">param_endpoint_did</string>
    <string name="param_security_question">param_security_question</string>
    <string name="param_security_answer">param_security_answer</string>
    <string name="param_identity_credential">param_identity_credential</string>
    <string name="param_job_title">param_job_title</string>
    <string name="param_company_name">param_company_name</string>
    <string name="param_token">param_token</string>

    <string name="param_file_id">param_file_id</string>
    <string name="param_file_type">param_file_type</string>
    <string name="param_file_name">param_file_name</string>
    <string name="param_file_valid">param_file_valid</string>
    <string name="param_file_upload_at">param_file_upload_at</string>
    <string name="param_file_href">param_file_href</string>

    <string name="param_passport_no">param_passport_no</string>
    <string name="param_passport">param_passport</string>
    <string name="param_id_type">param_id_type</string>
    <string name="param_id_type_name">param_id_type_name</string>
    <string name="param_selfie">param_selfie</string>
    <string name="param_address_image">param_address_image</string>
    <string name="secret_answer">Secret Answer</string>
    <string name="secret_question">Secret Question</string>

    <string name="app_name">One Identity</string>
    <string name="retore_your_identity">Restore\nYour Identity</string>
    <string name="welcome_intro">Gives you control over your data and eliminates the painful process of having to constantly submit KYC for every financial service or retailer you sing up for every financial or digital services you sign up for.</string>
    <string name="email_verification">Email\nverification</string>
    <string name="control_your_digital_identity">Control\nyour digital\nidentity securely</string>
    <string name="identity_creation">Identity creation</string>
    <string name="build_your_profile">Build your\nprofile</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="payment_wallet">Payment Wallet</string>
    <string name="add_payment_wallet">Add Payment wallet</string>
    <string name="no_record">There is no record at the moment</string>
    <string name="did">DID</string>
    <string name="add_did">Add DID</string>
    <string name="add_did_message">To easily identify a DID, please provide a friendly name.</string>
    <string name="connection">Connection</string>
    <string name="add_connection">Add Connection</string>
    <string name="credential">Credential</string>
    <string name="message">Message</string>
    <string name="credential_offer">Credential Offer</string>
    <string name="receive_credential">Receive Credential</string>
    <string name="proof_request">Proof Request</string>
    <string name="proof_offer">Proof Offer</string>
    <string name="create_proof_offer">Create Proof Offer</string>
    <string name="build_profile_message">Get your identity credential by completing your profile in order to access to list of financial and digital services. Once you obtain our identity credential, you can request for digital credentials from our partners.</string>
    <string name="get_credential_message">Digital Credential Not Available. Please obtain the identity credential by completing your profile.</string>
    <string name="did_listing_message">Digital ID (DID) is used to securely and anonymously connect with a counterparty. You need to create a new DID for each connection.\n\nYou haven’t create any DID yet. Please click on + to create new DID.</string>
    <string name="information">Information</string>
    <string name="connection_add_message">Proceed to DID page to establish a connection with entity using an existing non pairwised DID.</string>

    <string name="profile_wallet_message">Wallet is a cloud based storage that securely store your identity information and digital credentials. It’s encrypted using your password and only you have the access to the wallet.</string>
    <string name="user_friendly_did_name">User friendly DID Name</string>
    <string name="password_purpose">The password will be used to encrypt your personal data and unlock your wallet.</string>
    <string name="strong_password">Choose a strong password</string>
    <string name="password_limit">8&#8211;20 characters</string>
    <string name="repeat_password">Repeat password</string>
    <string name="gender">Gender</string>
    <string name="gender_message">Choose your gender</string>
    <string name="email">Email</string>
    <string name="security_question">Security Question</string>
    <string name="security_question_message">Choose your security question</string>
    <string name="security_answer">Security Answer</string>
    <string name="security_answer_message">Write your security answer</string>
    <string name="do_not_forget_password_reminder">Please do not forget this password! There is no recovery option available at the moment.</string>
    <string name="ok_i_got_it">OK, I got it!</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="alternate_address">Alternate Address</string>
    <string name="wallet_currency">Wallet Currency</string>
    <string name="my_identity">My Identity</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">"Date of Birth</string>
    <string name="passport">Passport</string>
    <string name="passport_id_license">Passport / Identity Card / Driving License</string>
    <string name="selfie">Selfie</string>
    <string name="proof">Proof</string>
    <string name="wallet">Wallet</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country</string>
    <string name="dob_message">What is your date of birth?</string>
    <string name="first_name_message">What is your given name?</string>
    <string name="first_name_hint">Given Name</string>
    <string name="last_name_message">What is your family name?</string>
    <string name="last_name_hint">What is your family name?</string>
    <string name="nationality">Nationality</string>
    <string name="choose_id_type">Choose your id type</string>
    <string name="job_title">Job Title</string>
    <string name="job_title_message">What is your current job title</string>
    <string name="company_name">Company name</string>
    <string name="company_name_message">What is your current company name</string>
    <string name="email_question">What is your email?</string>
    <string name="passport_no">Passport No</string>
    <string name="passport_no_id_no_license_no">Passport / Identity Card / Driving License No</string>
    <string name="passport_image_message">"Upload a clear and legible picture of your passport front page</string>
    <string name="passport_id_license_image_message">"Upload a clear and legible picture of your passport / identity card / driving license front page</string>
    <string name="upload_photo">Upload your photo</string>
    <string name="mobile_number_message">What is your mobile number?</string>
    <string name="telephone_number_message">What is your telephone number?</string>
    <string name="proof_of_address">Proof of Address</string>
    <string name="proof_of_address_message">Take a clear and legible picture of a recent utility bill displaying your adddress (electricity, phone, water)</string>
    <string name="complete_liveness_verification_message">Complete liveness verification\nto obtain a selfie image</string>
    <string name="selfie_message">Selfie image will be automatically captured after you have performed the liveness verification to match with the photo of your passport\n\nPlease ensure you have upload a clear copy of your passport image\n\nDuring the process, we will ask you to perform action to confirm you are real person\n\nThe process will take less than 10 seconds if done correctly. Else you will need to repeat the process</string>
    <string name="user_friendly_wallet_name">User friendly Wallet Name</string>
    <string name="wallet_id_message">This is your wallet id</string>

    <string name="success_image_uploaded">Image uploaded successfully</string>
    <string name="success_identity_credential">Congratulation. You have now obtained your identity credential. You can now connect with other Entity.</string>
    <string name="error_required_field">This is a required field</string>
    <string name="error_invalid_email">Email address not valid</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_password_length">Password length must be within 8 to 20 characters</string>
    <string name="error_please_try_again">An error occurred. Please try again.</string>
    <string name="error_check_box_got_it">You need to check on the checkbox</string>
    <string name="error_unable_to_open_camera">Error opening camera</string>
    <string name="error_passport_image_and_selfie_not_match">Passport image doesn\'t match with selfie image. Make sure your are the valid owner of the passport</string>
    <string name="error_passport_image_not_found">Please ensure that you have already uploaded your passport image</string>
</resources>
