<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal" >
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="140dip"
        android:layout_height="140dip"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_welcome_bg_top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_back"
                    android:layout_width="40dip"
                    android:layout_height="30dip"
                    android:layout_marginLeft="4dip"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/back"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:lineSpacingExtra="6dip"
                    android:text="@string/identity_creation"
                    android:textSize="30sp"
                    android:textColor="#717171"
                    app:fontFamily="sans-serif-medium"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:orientation="horizontal">
                        <Space
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.125"/>
                        <LinearLayout
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:text="@string/password_purpose"
                                android:textSize="15sp"
                                android:textColor="#979797"
                                app:fontFamily="sans-serif"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dip"
                                android:text="@string/strong_password"
                                android:textSize="14sp"
                                android:textColor="#a0a7ff"
                                app:fontFamily="sans-serif"/>

                            <EditText
                                android:id="@+id/input_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:inputType="textPassword"
                                android:imeOptions="actionNext"
                                android:hint="@string/password_limit"
                                android:text=""
                                android:textSize="15sp"
                                android:textColor="@color/colorInput"
                                app:fontFamily="sans-serif"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dip"
                                android:text="@string/repeat_password"
                                android:textSize="14sp"
                                android:textColor="#a0a7ff"
                                app:fontFamily="sans-serif"/>

                            <EditText
                                android:id="@+id/input_password_confirm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:inputType="textPassword"
                                android:imeOptions="actionNext"
                                android:hint="********"
                                android:text=""
                                android:textSize="15sp"
                                android:textColor="@color/colorInput"
                                app:fontFamily="sans-serif"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dip"
                                android:text="@string/gender"
                                android:textSize="14sp"
                                android:textColor="#a0a7ff"
                                app:fontFamily="sans-serif"/>

                            <EditText
                                android:id="@+id/input_gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:inputType="text"
                                android:imeOptions="actionDone"
                                android:focusable="false"
                                android:hint="@string/gender_message"
                                android:text=""
                                android:textSize="15sp"
                                android:textColor="@color/colorInput"
                                app:fontFamily="sans-serif"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dip"
                                android:text="@string/email"
                                android:textSize="14sp"
                                android:textColor="#a0a7ff"
                                app:fontFamily="sans-serif"/>

                            <EditText
                                android:id="@+id/input_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:inputType="textEmailAddress"
                                android:imeOptions="actionNext"
                                android:hint="name@mail.com"
                                android:text=""
                                android:textSize="15sp"
                                android:textColor="@color/colorInput"
                                app:fontFamily="sans-serif"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dip"
                                android:text="@string/secret_question"
                                android:textSize="14sp"
                                android:textColor="#a0a7ff"
                                app:fontFamily="sans-serif"/>

                            <EditText
                                android:id="@+id/input_security_question"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:inputType="text"
                                android:imeOptions="actionDone"
                                android:focusable="false"
                                android:hint="@string/security_question_message"
                                android:text=""
                                android:textSize="15sp"
                                android:textColor="@color/colorInput"
                                app:fontFamily="sans-serif"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dip"
                                android:text="@string/security_answer"
                                android:textSize="14sp"
                                android:textColor="#a0a7ff"
                                app:fontFamily="sans-serif"/>

                            <EditText
                                android:id="@+id/input_security_answer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:inputType="text"
                                android:imeOptions="actionDone"
                                android:hint="@string/security_answer_message"
                                android:text=""
                                android:textSize="15sp"
                                android:textColor="@color/colorInput"
                                app:fontFamily="sans-serif"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dip"
                                android:text="@string/do_not_forget_password_reminder"
                                android:textSize="14sp"
                                android:textColor="#a0a7ff"
                                app:fontFamily="sans-serif"/>
                        </LinearLayout>
                        <Space
                            android:layout_width="0dip"
                            android:layout_height="20dip"
                            android:layout_weight="0.125"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_margin="10dip"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_got_it"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        app:buttonTint="#1EB56F"
                        android:text="@string/ok_i_got_it"
                        android:textSize="14sp"
                        android:textColor="#979797"
                        app:fontFamily="sans-serif"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_save_and_continue"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/save_and_continue"/>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>